crianção do GET e POST do servidor e instalação de pacotes

--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "utf8": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
